feet: added birth event in Get person endpoint's response
