# services/apigateway/docs/swagger.json
@@ -4948,11 +4948,73 @@
                 }
             }
         },
+        "familytree.familyEventJSON": {
+            "type": "object",
+            "properties": {
+                "additional_person_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "created_at_unix": {
+                    "type": "integer"
+                },
+                "date_bound": {
+                    "type": "string",
+                    "enum": [
+                        "EVENT_DATE_BOUND_UNSPECIFIED",
+                        "EVENT_DATE_BOUND_EXACT",
+                        "EVENT_DATE_BOUND_NOT_BEFORE",
+                        "EVENT_DATE_BOUND_NOT_AFTER"
+                    ]
+                },
+                "date_iso": {
+                    "type": "string"
+                },
+                "date_precision": {
+                    "type": "string",
+                    "enum": [
+                        "EVENT_DATE_PRECISION_UNSPECIFIED",
+                        "EVENT_DATE_PRECISION_DAY",
+                        "EVENT_DATE_PRECISION_MONTH",
+                        "EVENT_DATE_PRECISION_YEAR"
+                    ]
+                },
+                "date_unknown": {
+                    "type": "boolean"
+                },
+                "event_type_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_autogenerated": {
+                    "type": "boolean"
+                },
+                "primary_person_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "tree_id": {
+                    "type": "string"
+                },
+                "updated_at_unix": {
+                    "type": "integer"
+                }
+            }
+        },
         "familytree.familyPersonJSON": {
             "type": "object",
             "properties": {
                 "avatar_photo_id": {
                     "type": "string"
+                },
+                "birth_event": {
+                    "$ref": "#/definitions/familytree.familyEventJSON"
                 },
                 "first_name": {
                     "type": "string"
